# sensor-fusion-localiser

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
applications/: CMakeLists.txt
applications/VIOGpsLocalisation/: CMakeLists.txt  geodetic_conv.hpp  main.cpp
applications/VisualInertialOdometry/: CMakeLists.txt  main.cpp  main.h
source/sfl/: CMakeLists.txt
source/sfl/lookups/: CMakeLists.txt  CitrusDatasetZedCalibration.cpp  CitrusDatasetZedCalibration.h  MonoCameraCalibrationIf.h  StereoCameraCalibrationIf.h
source/sfl/types/: GpsReading.h  ImuSample.h  MetricUnits.h  Quarternion.h  RosTime.h  RosTimedData.h  Transform3D.h
source/sfl/utilities/: CMakeLists.txt  PathsFromRegex.cpp  PathsFromRegex.h  RotationMatrixToQuarternion.cpp  RotationMatrixToQuarternion.h  readRosImuFromCsv.cpp  readRosImuFromCsv.h  readRosTimedGpsFromCsv.cpp  readRosTimedGpsFromCsv.h  readVoTransformsFromCsv.cpp  readVoTransformsFromCsv.h
tests/: CMakeLists.txt
tests/demo_tests/: CMakeLists.txt  README.md
tests/demo_tests/HelloWorld/: main.cpp
tests/demo_tests/ImuSerialRead/: CMakeLists.txt  main.cpp
tests/demo_tests/SingleThreadedVO/: CMakeLists.txt  main.cpp
tests/demo_tests/StereoRectification/: CMakeLists.txt
tests/demo_tests/TestImuCsvRead/: CMakeLists.txt  main.cpp
tests/demo_tests/TestVoCsvRead/: CMakeLists.txt  main.cpp
tests/pattern_examples/: CMakeLists.txt
tests/pattern_examples/channels/: CMakeLists.txt  main.cpp
tests/pattern_examples/thread_spawning/: CMakeLists.txt  README.md  main.cpp
third_party_sources/: CMakeLists.txt
